##################################################
 Revision history for Log::Log4perl
##################################################

1.24 (not yet released)
    *   (ms) Fixed bug with Log::Log4perl::Util::tmpfile_name which 
             surfaced on VMS, reported by Ben Humphreys.

1.23 (2009/05/12)
    *   (ms) DBI-1.608 removed a DBD::File 'feature' that allowed leaving
             out parameters in a bound execute(). This caused the test
             suite to fail (http://groups.google.com/group/perl.cpan.testers/browse_thread/thread/af1f5c875165c387). Fixed the test cases to pass the correct 
             number of parameters every time.
    *   (ms) Better error message in the DBI appender on bad SQL, missing
             bind parameters, or other execute() errors.
    *   (ms) Made DBI test suite more robust against preexisting conditions
    *   (ms) Added force_next_check() for init_and_watch(), cleaned up
             Config::Watcher code.
    *   (ms) Fixed test suite to run on Strawberry Perl on Win32 (reported
             by kmx on https://rt.cpan.org/Ticket/Display.html?id=45983)
    *   (ms) Added 'utf8' option to screen appender and easy mode, some of
             it suggested in 
             http://rt.cpan.org/Public/Bug/Display.html?id=36673 by
             Shantanu Bhadoria.

1.22 (2009/05/02)
    *   (ms) is_xxx() returned true prior to L4p initialization. Fixed it
             and adapted test suite.
    *   (ms) Added test cases on syswrite in recreate mode
    *   (ms) Applied patch by Jens Berthold <log4perl@jebecs.de> to
             avoid semaphore cleanup in spawned children.
    *   (ms) Added %m{chomp} feature, 'message_chomp_before_newline' option,
             and documentation on newlines and logging messages, all 
             suggested by Tim Bunce (see PatternLayout).

1.21 (2009/03/16)
    *   (ms) Documentation typos fixed, reported by Breno G. de Oliveira
             [rt.cpan.org #42428].